# mcp-proxy

./: .dockerignore  .gitignore  CARGO_DIST_SETUP.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  Dockerfile  Dockerfile.mcp-proxy  LICENSE  LICENSE-APACHE  LICENSE-MIT  Makefile  README.md  README_zh-CN.md  RELEASE.md  config.yml  deny.toml  dist-workspace.toml  dist.toml  test_complete_sse_streamable.sh  test_multipart.md  test_sse_stream.sh  test_sse_streamable.sh  test_sse_to_stream.py
document-parser/: CUDA_SETUP_GUIDE.md  Cargo.toml  README.md  README_zh-CN.md  TEST_README.md  TROUBLESHOOTING.md  USER_MANUAL.md  config.yml  test_api.rest  test_curl.sh  test_delete_api.rest  test_sample.md  test_server.sh  test_upload.sh  如何使用OSS签名URL上传文件.md
document-parser/benches/: document_parsing_bench.rs  markdown_processing_bench.rs
document-parser/examples/: markdown_image_processing.rs
document-parser/fixtures/: sample_config.json  sample_data.csv  sample_data.xml  sample_markdown.md  sample_text.txt  simple_markdown.md  technical_doc.md  test_config.yml  upload_parse_test.md
document-parser/locales/: en.yml
document-parser/src/: app_state.rs  config.rs  error.rs  lib.rs  main.rs  routes.rs
document-parser/src/handlers/: document_handler.rs  health_handler.rs  markdown_handler.rs  mod.rs  monitoring_handler.rs  oss_handler.rs  private_oss_handler.rs  response.rs  task_handler.rs  toc_handler.rs  validation.rs
document-parser/src/middleware/: error_handler.rs  mod.rs
document-parser/src/models/: document_format.rs  document_task.rs  http_result.rs  mod.rs  oss_data.rs  parse_result.rs  parser_engine.rs  structured_document.rs  task_status.rs  test_models.rs  toc_item.rs
document-parser/src/parsers/: dual_engine_parser.rs  format_detector.rs  markitdown_parser.rs  mineru_parser.rs  mod.rs  parser_trait.rs
document-parser/src/performance/: cache_manager.rs  concurrency_optimizer.rs  memory_optimizer.rs  metrics_collector.rs  mod.rs  resource_monitor.rs
document-parser/src/processors/: markdown_processor.rs  mod.rs  test_markdown.rs
document-parser/src/production/: config_validation.rs  deployment_health.rs  graceful_shutdown.rs  mod.rs  monitoring_integration.rs  production_logging.rs  resource_cleanup.rs
document-parser/src/services/: document_service.rs  document_task_processor.rs  image_processor.rs  mod.rs  oss_service.rs  storage_service.rs  task_queue_service.rs  task_service.rs
document-parser/src/tests/: comprehensive_unit_tests.rs.disabled  coverage_tests.rs  current_directory_workflow_tests.rs  environment_manager_enhanced_tests.rs  handlers.rs  mod.rs  models.rs  parsers.rs  path_error_handling_tests.rs  processors.rs  property_tests.rs  (+4 more)
document-parser/tests/: config_test.rs  current_directory_integration_tests.rs  end_to_end_tests.rs  environment_integration_tests.rs  image_processing_integration_tests.rs  integration_test_framework.rs  integration_tests.rs  monitoring_integration_tests.rs  oss_integration_tests.rs
fastembed/: Cargo.toml  README.md  README_zh-CN.md  config.yml
fastembed/src/: config.rs  main.rs
mcp-common/: Cargo.toml  README.md  README_zh-CN.md  build.rs
mcp-common/locales/: zh-TW.yml
mcp-common/src/: client_config.rs  config.rs  diagnostic.rs  i18n.rs  lib.rs  mirror.rs  process_compat.rs  telemetry.rs  tool_filter.rs
mcp-proxy/: Cargo.toml  LICENSE-MIT  QUICK_START.md  README.md  README_zh-CN.md  TEST_STREAMABLE.md  config.yml  creat_table.sql  debug_routes.rest  test_mcp.rest  test_mcp_sse.rest  test_mcp_sse_streamable.rest  test_mcp_status.rest  test_mcp_streamable.rest  test_mcp_streamable_streamable.rest  test_run_code.rest  test_sse_client.py  test_sse_complete.sh  test_sse_connection.sh  test_sse_paths.md  test_sse_simple.sh
mcp-proxy/benches/: README.md  run_code_advanced_bench.rs  run_code_bench.rs
mcp-proxy/docs/: protocol-auto-detection.md
mcp-proxy/examples/: axum_router.rs
mcp-proxy/src/: config.rs  env_init.rs  lib.rs  main.rs  mcp_error.rs
mcp-sse-proxy/: Cargo.toml  README.md  README_zh-CN.md
mcp-sse-proxy/examples/: test_mcp_server.rs
mcp-sse-proxy/src/: client.rs  config.rs  detector.rs  lib.rs  server.rs  server_builder.rs  sse_handler.rs
mcp-streamable-proxy/: Cargo.toml  README.md  README_zh-CN.md
mcp-streamable-proxy/src/: client.rs  config.rs  detector.rs  lib.rs  proxy_handler.rs  server.rs  server_builder.rs  session_manager.rs
oss-client/: Cargo.toml  README.md  README_zh-CN.md
oss-client/examples/: basic_usage.rs  domain_replacement.rs  signed_url.rs  trait_usage.rs
oss-client/locales/: zh-CN.yml
oss-client/src/: config.rs  error.rs  lib.rs  private_client.rs  public_client.rs  utils.rs
oss-client/tests/: integration_tests.rs
voice-cli/: APALIS_RESEARCH.md  API_DOCUMENTATION.md  BACKGROUND_SERVICE_GUIDE.md  CLAUDE.md  Cargo.toml  DAEMON_BEST_PRACTICES.md  INDEXTTS_SETUP.md  MODEL_VALIDATION_FIX.md  README.md  README_zh-CN.md  SAFE_DAEMON_SUMMARY.md  TTS_README.md  UNSAFE_CODE_ALTERNATIVES.md  build.rs  cluster-config.yml  config.yml  install_indextts.sh  mock_tts_service.py  pyproject.toml  test_config.yml  test_indextts.py  tts_service.py  tts_service.py.backup
voice-cli/docs/: load_balancer.md
voice-cli/examples/: background_service_examples.rs  load_balancer_example.rs
voice-cli/fixtures/: comprehensive_tts_test.py  test_real_tts.py  test_tts.py
voice-cli/proto/: audio_cluster.proto
voice-cli/scripts/: cluster-manager.sh  lb-manager.sh  server-manager.sh
voice-cli/src/: config.rs  config_rs_integration.rs  error.rs  lib.rs  main.rs  openapi.rs
voice-cli/templates/: cluster-config.yml.template  config.yml.template  lb-config.yml.template  server-config.yml.template
voice-cli/tests/: audio_pipeline_business_logic_tests.rs  background_service_tests.rs  cluster_integration_tests.rs  cluster_lifecycle_tests.rs  cluster_multinode_tests.rs  cluster_state_integration_test.rs  cluster_unit_tests.rs  config_template_tests.rs  e2e_cluster_tests.rs  failover_scenarios_tests.rs  integration_tests.rs  load_balancer_integration_tests.rs  stt_integration_tests.rs
(+397 files in other folders)
