[workspace]
members = [ "document-parser","mcp-proxy"]
resolver = "2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace.dependencies]
mcp-proxy = { path = "mcp-proxy" }

rmcp = { version = "0.5", features = [
    "server",
    "client",
    "transport-sse-server",
    "transport-sse-client",
    "transport-streamable-http-client",
    "transport-streamable-http-server",
    "transport-child-process",
    "transport-io",
    "reqwest",
] }
tokio = { version = "1", features = ["macros", "net", "rt", "rt-multi-thread"] }
tokio-util = "0.7"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "=0.2.2"
log = "0.4"
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde", "now"] }
thiserror = "2.0"
axum = { version = "0.8", features = [
    "http2",
    "query",
    "tracing",
    "ws",
    "multipart",
    "macros",
] }
tower = { version = "0.5" }
tower-http = { version = "0.6", features = [
    "compression-full",
    "cors",
    "fs",
    "trace",
    "limit",
] }
axum-extra = { version = "0.10", features = ["typed-header"] }
utoipa = { version = "5.3", features = ["axum_extras", "chrono"] }
utoipa-rapidoc = { version = "6", features = ["axum"] }
utoipa-redoc = { version = "6", features = ["axum"] }
utoipa-swagger-ui = { version = "9", features = ["axum"] }
dashmap = "6.1"
criterion = "0.7"
once_cell = "1.21"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "=0.9.33"
serde_with = "3.12"
reqwest = { version = "0.12", features = ["json"] }
http = "1.3"
aliyun-oss-rust-sdk = "0.2"
clap = { version = "4.5", features = ["derive", "env"] }
uuid = { version = "1", features = ["v7"] }
futures = "0.3"
run_code_rmcp = "0.0.31"
rand = "0.9"
