[workspace]
members = ["document-parser", "fastembed", "mcp-proxy", "oss-client", "voice-cli"]
resolver = "2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace.dependencies]
mcp-proxy = { path = "mcp-proxy" }
oss-client = { path = "oss-client" }

rmcp = { version = "0.9", features = [
    "server",
    "client",
    "transport-sse-server",
    "transport-sse-client",
    "transport-streamable-http-client",
    "transport-streamable-http-client-reqwest",
    "transport-streamable-http-server",
    "transport-child-process",
    "transport-io",
    "reqwest",
    "transport-sse-client-reqwest"
] }
tokio = { version = "1.48", features = ["macros", "net", "rt", "rt-multi-thread"] }
tokio-util = "0.7"

# Logging and tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
tracing-opentelemetry = "0.32"
opentelemetry = { version = "0.31", features = ["trace"] }
opentelemetry-jaeger = { version = "0.22", features = ["rt-tokio"] }
opentelemetry-semantic-conventions = { version = "0.31", features = ["semconv_experimental"] }
opentelemetry_sdk = "0.31"
hostname = "0.4"
uuid = { version = "1.18", features = ["v4", "v7"] }
rand = "0.9"
log = "0.4"
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde", "now"] }
thiserror = "2.0"
axum = { version = "0.8", features = [
    "http2",
    "query",
    "tracing",
    "ws",
    "multipart",
    "macros",
] }
tower = { version = "0.5" }
tower-http = { version = "0.6", features = [
    "compression-full",
    "cors",
    "fs",
    "trace",
    "limit",
] }
axum-extra = { version = "0.12", features = ["typed-header"] }
utoipa = { version = "5.4", features = ["axum_extras", "chrono", "uuid"] }
utoipa-rapidoc = { version = "6", features = ["axum"] }
utoipa-redoc = { version = "6", features = ["axum"] }
utoipa-swagger-ui = { version = "9", features = ["axum"] }
dashmap = "6.1"
moka = { version = "0.12", features = ["future"] }
criterion = "0.7"
once_cell = "1.21"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "=0.9.33"
serde_with = "3.12"
reqwest = { version = "0.12", features = ["json"] }
http = "1.3"
aliyun-oss-rust-sdk = { version = "0.2", default-features = false, features = ["async"] }
clap = { version = "4.5", features = ["derive", "env"] }
futures = "0.3"
run_code_rmcp = "0.0.33"
derive_builder = "0.20"
bytes = "1.0"
base64 = "0.22"
tempfile = "3.23"
dirs = "6.0"
scopeguard = "1.2"

async-trait = "0.1"

# 自己开发的语音相关工具
voice-toolkit = { version = "0.16", features = ["stt", "audio"] }

# Task queue and persistence for async processing
apalis = { version = "0.7", features = ["tracing", "limit"] }
apalis-sql = { version = "0.7", features = ["sqlite"] }
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "sqlite", "chrono", "uuid"] }
sled = "0.34"

# Audio format detection and processing
symphonia = { version = "0.5", features = ["all"] }
bincode = "2.0"
tokio-stream = "0.1.17"
backtrace = "0.3"
tracing-futures = "0.2.5"
urlencoding = "2.1.3"
