[package]
name = "fastembed"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "fastembed"
path = "src/main.rs"

[dependencies]
# Web framework
axum = { workspace = true }
tokio = { workspace = true, features = ["signal"] }
tower = { workspace = true }
tower-http = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }

# CLI
clap = { workspace = true }

# Logging and tracing
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Embedding library
fastembed = { version = "5", features = ["ort-download-binaries", "hf-hub-native-tls"] }

# Concurrency and caching
dashmap = { workspace = true }
once_cell = { workspace = true }

# Error handling
anyhow = { workspace = true }
thiserror = { workspace = true }

# Time
chrono = { workspace = true }

# Utilities
dirs = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }
tempfile = { workspace = true }
