[package]
name = "mcp-sse-proxy"
version = "0.1.0"
edition = "2024"

[dependencies]
# 共享类型和工具
mcp-common = { version = "0.1.0", path = "../mcp-common" }

# MCP protocol implementation - using 0.10 for SSE support (removed in 0.12)
# Note: rmcp 0.10 uses workspace dependencies, so we only specify transport features
rmcp = { version = "0.10", features = [
    "server",
    "client",
    "transport-sse-server",
    "transport-sse-client",
    "transport-streamable-http-client",
    "transport-streamable-http-client-reqwest",
    "transport-streamable-http-server",
    "transport-child-process",
    "transport-io",
    "reqwest",
    "transport-sse-client-reqwest"
] }

# Async runtime (添加 signal feature 用于 Ctrl+C 处理)
tokio = { workspace = true, features = ["signal"] }
tokio-util = { workspace = true }

# Web framework
axum = { workspace = true }
tower = { workspace = true }

# Logging
tracing = { workspace = true }

# Utilities
arc-swap = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
futures = { workspace = true }
