[package]
name = "mcp-streamable-proxy"
version = "0.1.0"
edition = "2024"

[dependencies]
# 共享类型和工具
mcp-common = { version = "0.1.0", path = "../mcp-common" }

# MCP protocol implementation - using 0.12 for enhanced Streamable HTTP support
rmcp = { version = "0.12", features = [
    "server",
    "client",
    "transport-streamable-http-server",
    "transport-streamable-http-server-session",  # Critical: custom SessionManager support
    "transport-streamable-http-client",
    "transport-streamable-http-client-reqwest",
    "server-side-http",
    "transport-child-process",
    "transport-io",
    "transport-async-rw",
    "reqwest",
    "axum",
    "tower",
    "base64",
    "macros",
] }

# Concurrent hashmap for session management (better than Arc<RwLock<HashMap>>)
dashmap = { workspace = true }

# Async runtime (添加 signal feature 用于 Ctrl+C 处理)
tokio = { workspace = true, features = ["signal"] }
tokio-util = { workspace = true }

# Web framework
axum = { workspace = true }
tower = { workspace = true }

# Logging
tracing = { workspace = true }

# Utilities
arc-swap = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }
