[package]
name = "voice-cli"
version = "0.1.0"
edition = "2024"
authors = ["soddy <your.email@example.com>"]
description = "Speech-to-text HTTP service with CLI interface"
license = "MIT"

[[bin]]
name = "voice-cli"
path = "src/main.rs"

[dependencies]
# Web framework and HTTP handling
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }

# OpenAPI documentation generation
utoipa = { workspace = true, features = ["axum_extras", "chrono", "uuid"] }
utoipa-swagger-ui = { workspace = true, features = ["axum"] }

# Async runtime
tokio = { version = "1", features = [
    "macros",
    "net",
    "rt",
    "rt-multi-thread",
    "signal",
] }
tokio-util = { workspace = true }

# CLI argument parsing
clap = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }

# Configuration management
config = { version = "0.15", features = ["yaml", "json", "toml"] }

# Logging and tracing
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-appender = { workspace = true }

# Error handling
anyhow = { workspace = true }
thiserror = { workspace = true }

# HTTP client for model downloads
reqwest = { version = "0.12", features = ["json", "stream"] }

# Time handling
chrono = { workspace = true, features = ["serde"] }

# Utilities
bytes = "1.0"
futures = { workspace = true }
uuid = { workspace = true, features = ["v4"] }
base64 = "0.22"
tempfile = "3.0"
dirs = "6.0"


# Audio format detection with Symphonia
symphonia = { version = "0.5", features = ["all"] }

# Cluster functionality dependencies
# Note: Raft consensus temporarily disabled due to protobuf version conflicts
# We'll implement a simpler consensus mechanism first

# gRPC for inter-node communication
tonic = "0.14"
tonic-prost = "0.14"
prost = "0.14"
prost-types = "0.14"

# Embedded database for cluster metadata
sled = "0.34"

# Additional dependencies for cluster functionality
dashmap = "6.1"
parking_lot = "0.12"
sha2 = "0.10"

# Network IP discovery
local-ip-address = "0.6"
if-addrs = "0.14"


[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["winuser", "processthreadsapi"] }

[dependencies.voice-toolkit]
workspace = true

[dev-dependencies]
tempfile = "3.0"

[build-dependencies]
# Protocol buffer compilation
tonic-prost-build = "0.14"
prost-build = "0.14"

[features]
default = []
# 方便通过 `-p voice-cli --features <name>` 启用/切换后端
cuda = ["voice-toolkit/cuda"]
metal = ["voice-toolkit/metal"]
vulkan = ["voice-toolkit/vulkan"]
